# xlc

./: .gitignore  CMakeLists.txt
imrclient/: CMakeLists.txt
imrclient/include/: imr_client.h  socket_transport.h
imrclient/protocols/: imr.thrift
imrclient/src/: imr_client.cpp
xlc/: CMakeLists.txt  dummy.cpp  number_utils.cpp
xlc/include/: blocking_queue.h  command.h  number_utils.h  remote_client.h  remote_transport.h
xlc/src/: remote_client.cpp
xlctestapp/: CMakeLists.txt  main.cpp  rc_test.cpp
